feat: update technical architecture (PoS+BFT, PQC) and sync 7 locales

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -2,32 +2,47 @@
   "navbar": {
     "home": "الرئيسية",
     "explorer": "المستكشف",
-    "validators": "المصادقون",
+    "validators": "المثبتون",
     "contact": "اتصل بنا",
-    "legal": "القانونية",
+    "legal": "قانوني",
     "launch_app": "تشغيل التطبيق"
   },
   "hero": {
     "chain_status": "الشبكة الرئيسية ألفا تعمل",
     "title": "درع السيادة",
-    "subtitle": "معايير وادي السيليكون، روح رمح الخيزران.",
+    "subtitle": "\"معايير وادي السيليكون، روح رمح الخيزران\"",
     "btn_explore": "استكشف الشبكة",
-    "btn_run_node": "شغّل عقدة"
+    "btn_run_node": "تشغيل عقدة"
   },
   "manifesto": {
-    "title": "بيان التكوين",
-    "asymmetric_title": "التحدي غير المتماثل",
-    "asymmetric_desc": "بني على أجهزة قديمة لإثبات أن السيادة تولد من الدقة الفكرية، وليس من رفاهية المكاتب.",
-    "compliance_title": "الامتثال العالمي",
-    "compliance_desc": "نركز على الإمارات وسنغافورة وسويسرا لضمان بنية تحتية قانونية مقاومة للكم.",
-    "tier_title": "استراتيجية السوق العالمية (المستوى 1-4)",
-    "tier_1": "المستوى 1 (الآن): الإمارات، سنغافورة، سويسرا",
-    "tier_4": "المستوى 4 (الوطن): إندونيسيا (مركز البحث والتطوير)"
+    "title": "بيان التأسيس",
+    "quote": "\"معايير وادي السيليكون، روح رمح الخيزران\"",
+    "desc": "السيادة الرقمية لا تتطلب مكاتب فاخرة في سان فرانسيسكو. نحن نبني سيادة مستقلة على أجهزة فعالة لتأمين المستقبل.",
+    "p1_title": "صفر تمويل",
+    "p1_desc": "ابتكار نقي بدون ديون لأطراف خارجية أو عبء رأس المال الأجنبي.",
+    "p2_title": "جيش الرجل الواحد",
+    "p2_desc": "انضباط هندسي عالمي في كل سطر من أكواد Go-Lang الأصلية.",
+    "p3_title": "سفينة النجاة الكمومية",
+    "p3_desc": "حماية الأصول الرائدة من تهديدات الحوسبة الكمومية القادمة."
+  },
+  "architecture": {
+    "title": "الهندسة التقنية",
+    "item1_title": "عقدة Go-Lang الأساسية",
+    "item1_desc": "تنفيذ أصلي بلغة Go-lang. أداء عالٍ محسّن للأجهزة خفيفة الوزن (4 جيجابايت رام).",
+    "item2_title": "إجماع PoS + BFT",
+    "item2_desc": "إثبات حصة متقدم مع تحمل الأخطاء البيزنطية. ضمان النهاية الفورية وعدم وجود مخاطر للانقسام.",
+    "item3_title": "درع NIST الكمومي",
+    "item3_desc": "أمان ما بعد الكم ثنائي الطبقات باستخدام Crystals-Dilithium (التوقيعات) و Crystals-Kyber (التشفير).",
+    "badge": "محمي بواسطة CRYSTALS STACK"
   },
   "infrastructure": {
-    "title": "حالة الشبكة العالمية"
+    "title": "الشبكة العالمية",
+    "status": "حالة البنية التحتية",
+    "active_node": "عقدة نشطة",
+    "latency": "زمن الاستجابة"
   },
   "footer": {
-    "text": "© 2026 البنية التحتية السيادية لـ QuantumPay"
+    "contact_title": "مركز القيادة",
+    "text": "© 2026 كوانتوم باي للبنية التحتية السيادية"
   }
 }
